--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -4,10 +4,12 @@
     margin: 0;
 }
 
+/*page background color*/
 body {
     background-color: #d9dcd6;
 }
 
+/*header*/
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -64,6 +66,7 @@ p {
     margin-left: 20px;
 }
 
+/*format for all content sections*/
 .content section{
     margin-bottom: 20px;
     padding: 50px;
@@ -83,10 +86,12 @@ p {
     margin-left: 25px;
 }
 
+/*height for all images in content div*/
 .content img {
     max-height: 200px;
 }
 
+/*consolidated h2 code*/
 h2 {
     margin-bottom: 20px;
     font-size: 36px;
@@ -104,18 +109,20 @@ h2 {
     background-color: #2589bd;
 }
 
+/*format for all benefits sections*/
 .benefits section {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
+/*format for all images in benefits section*/
 .benefits img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-h3 {
+/*consolidated h3 code*/
     margin-bottom: 10px;
     text-align: center;
 }
@@ -128,6 +135,6 @@ h3 {
     text-align: center;
 }
 
-.footer h2 {
+.footer h4 {
     font-size: 20px;
 }
